--- a/src/app/components/resetpassword/resetpassword.component.html
+++ b/src/app/components/resetpassword/resetpassword.component.html
@@ -68,9 +68,12 @@
           id="confirm-button"
           fxLayoutAlign="center center"
           mat-raised-button
-          color="primary"
+          color="primary" (click)="submit()"
         >
         Confirm
+        </button>
+        <button mat-button (click)="loginTo()" class="link" fxLayoutAlign="center">
+          Sign in insted
         </button>
     </div>
     </mat-card>
