--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,4 @@
 
-<div>
-<app-displaynote></app-displaynote>
+<div class="search">
+<app-displaynote fxLayout="row wrap" fxLayout="{{layout}}" (cards)="arrayCards"></app-displaynote>
 </div>
