--- a/src/app/components/displaynote/displaynote.component.html
+++ b/src/app/components/displaynote/displaynote.component.html
@@ -37,9 +37,9 @@
     </div>
     <div *ngIf="more != 'trash'">
         <app-iconlist
-          class="icon"
+          class="icon"	
           fxFlex="50"
-          fxFlex.xs="90"
+          fxFlex.xs="9￼ 
           [card]="array"
           [more]="archived"
           (archivedCard)="archive($event)"
@@ -53,7 +53,7 @@
 <!-- --------------------- display note earlier design --------------------------------------- -->
 
 <div
-  *ngFor="let array of cards"
+  *ngFor="let array of cards" 
   fxLayout="row wrap"
   fxLayoutAlign="start center"
   fxLayout.xs="column"
@@ -81,7 +81,7 @@
             fxFlex="90"
             fxFlexOffset.xl="20"
             fxFlex.xs="97"
-            (click)="openDialog(array, cond, array.id)"
+            (click)="openDialog(array, more, array.id)"
           >
             <mat-card-title matTextareaAutosize class="title"
               >{{ array.title }}
@@ -91,7 +91,7 @@
           <!-- Pin & Unpin -->
 
 
-          <div *ngIf="cond != 'trash'" id="pin" fxFlex="15">
+          <div *ngIf="more != 'trash'" id="pin" fxFlex="15">
             <button mat-icon-button color="basic">
               <div class="barpin" *ngIf="array.pinned">
                 <img
@@ -111,7 +111,7 @@
         <div>
           <div
           fxLayoutAlign="start center" 
-            (click)="openDialog(array, cond, array.id)"
+            (click)="openDialog(array, more, array.id)"
           >
             <mat-card-title
               matTextareaAutosize
