--- a/src/app/components/displaynote/displaynote.component.html
+++ b/src/app/components/displaynote/displaynote.component.html
@@ -1,56 +1,3 @@
-<!-- <div  class="gridView">
-  <mat-card fxLayout="row" [style.backgroundColor]="array.color"  fxLayoutGap="10px" *ngFor="let array of cards">
-    <div fxLayout='row' fxLayoutAlign="space-between center" >
-      <div class="title">
-        <div>{{array.title}}</div>
-        <div>
-          <button>
-
-          </button>
-          <button>
-
-          </button>
-          
-        </div>
-
-      </div>
-      <div>
-          {{array.description}}
-        </div>
-        <div fxFlex="100" *ngIf="more == 'trash'" fxLayoutAlign="start center">
-            <button
-              mat-icon-button
-              [matMenuTriggerFor]="menu"
-              colour="basic"
-              matTooltip="more"
-            >
-              <img id="img" src="../../../assets//image/outline-more_vert-24px.svg" />
-            </button>
-            <mat-menu #menu="matMenu">
-              <button mat-menu-item (click)="deleteForever(array)">
-                Delete forever
-              </button>
-              <button mat-menu-item (click)="restore(array)">Restore</button>
-            </mat-menu>
-          </div>
-       
-    </div>
-    <div *ngIf="more != 'trash'">
-        <app-iconlist
-          class="icon"	
-          fxFlex="50"
-          fxFlex.xs="9￼ 
-          [card]="array"
-          [more]="archived"
-          (archivedCard)="archive($event)"
-          (unarchiveCard)="unarchived($event)"
-          (deletecard)="archive(array)"
-          [type]="type"
-        ></app-iconlist>
-      </div>
-  </mat-card>
-</div> -->
-<!-- --------------------- display note earlier design --------------------------------------- -->
 
 <div
   *ngFor="let array of cards" 
@@ -136,7 +83,7 @@
         >
           <mat-chip
             >Today {{ array.reminder | date: "shortTime" }}
-            <mat-icon matChipRemove (click)="removeReminder(array)"
+            <mat-icon matChipRemove (click)="removeReminder(array)" (click)='openSnackBar()'
               >cancel</mat-icon
             >
           </mat-chip>
@@ -150,7 +97,7 @@
         >
           <mat-chip
             >Tomorrow {{ array.reminder | date: "shortTime" }}
-            <mat-icon matChipRemove (click)="removeReminder(array)"
+            <mat-icon matChipRemove (click)="removeReminder(array)" (click)='openSnackBar()'
               >cancel</mat-icon
             >
           </mat-chip>
@@ -167,7 +114,7 @@
         >
           <mat-chip
             >{{ array.reminder | date: "medium" }}
-            <mat-icon matChipRemove (click)="removeReminder(array)"
+            <mat-icon matChipRemove (click)="removeReminder(array)" (click)='openSnackBar()'
               >cancel</mat-icon
             >
           </mat-chip>
@@ -187,10 +134,10 @@
         <img id="img" src="../../../assets//image/outline-more_vert-24px.svg" />
       </button>
       <mat-menu #menu="matMenu">
-        <button mat-menu-item (click)="deleteForever(array)">
+        <button mat-menu-item (click)="deleteForever(array)" (click)='openSnackBar1()'>
           Delete forever
         </button>
-        <button mat-menu-item (click)="restore(array)">Restore</button>
+        <button mat-menu-item (click)="restore(array)" (click)='openSnackBar2()'>Restore</button>
       </mat-menu>
     </div>
 
