--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -118,28 +118,30 @@
     </div>
 
     <!-- profile pic edit -->
-
-    <button class="profileImage" mat-mini-fab [ngStyle]="{'background-image': 'url(' + img +')', 'background-size':'cover'}" 
-    [matMenuTriggerFor]="menu1" colour="warn"  matTooltip="Fundoo account : {{ username }}, email: {{ email }}" [matTooltipClass]="'my-tooltip'" 
-    fxLayout="row" fxLayoutAlign="end center"></button>
+    <button mat-mini-fab [ngStyle]="{'background-image':'url(' +img+ ')','background-size':'cover'}"
+    [matMenuTriggerFor]="menu1" colour="basic" matTooltip=" Fundoo Account" [matTooltipClass]="'my-tooltip'"
+    fxLayout="row" fxLayoutAlign="end center">
+  </button>
 
     <mat-menu id="profile" #menu1="matMenu" class="menu-button" fxLayout="row" fxLayoutAlign="end start">
-
-      <div class="backgroundimage">
-
-        <button mat-fab (click)="$event.stopPropogation()" [ngStyle]="{'background-image': 'url(' + img +')', 'background-size':'cover','width':'64px', 'height': '65px'}"
-        (click)="imageSelectFile.click()" matTooltip="Profile" class="imageSelect"
-        ><div mat-raised-button class="change">Change</div>
-        </button>
-        <div>
-          <div class="profileName">
-            {{ username }}
+      <div  class="backgroundimage" >
+        <button (click)="$event.stopPropagation()"
+        [ngStyle]="{'background-image':'url(' +img+ ')','background-size':'cover','width':'65px','height':'65px'}"
+        (click)="imageSelectFile.click()" matTooltip="Fundoo Account" mat-mini-fab class="imageSelect">
+        <div mat-raised-button class="change">change</div>
+      </button>
+      <div  >
+          <div  class="profileName">
+            {{username}}
           </div>
-          <div class="profileEmail">
-            {{ email }}
+          <div  class="profileEmail" >
+            {{email}}
           </div>
         </div>
-      </div>
+    </div>
+
+      <input fxHide class="image" type="file" (change)="fileUpload($event)" #imageSelectFile>
+
       <mat-divider></mat-divider>
       <button class="signout" mat-flat-button (click)="signout()" (click)='openSnackBar()'>
           Sign out
