--- a/src/app/components/imagecropper/imagecropper.component.html
+++ b/src/app/components/imagecropper/imagecropper.component.html
@@ -1,4 +1,4 @@
-<input type="file" (change)="fileChangeEvent($event)" />
+<!-- <input type="file" (change)="fileChangeEvent($event)" /> -->
 <image-cropper
     [imageChangedEvent]="data"
     [maintainAspectRatio]="true"
