--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -119,7 +119,7 @@
 
     <!-- profile pic edit -->
     <button mat-mini-fab [ngStyle]="{'background-image':'url(' +img+ ')','background-size':'cover'}"
-    [matMenuTriggerFor]="menu1" colour="basic" matTooltip=" Fundoo Account" [matTooltipClass]="'my-tooltip'"
+    [matMenuTriggerFor]="menu1" colour="basic" matTooltip=" Fundoo Account user: {{username}}, email: {{email}}" [matTooltipClass]="'my-tooltip'"
     fxLayout="row" fxLayoutAlign="end center">
   </button>
 
