--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,6 @@
 <div class="example-container" [class.example-is-mobile]="mobileQuery.matches">
+
+  <!-- ******************************* Tool bar ************************************* -->
   <mat-toolbar class="example-toolbar">
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon id="menu" matTooltip="Main menu">menu</mat-icon>
@@ -29,7 +31,7 @@
       </div>
     </div>
 
-    <!-- Search -->
+    <!-- ********************************** Search ***************************************** -->
 
     <div fxFlex="80" fxLayoutAlign="end start">
       <mat-form-field
@@ -43,20 +45,27 @@
         </button>
 
         <input
+        
           fxFlex="90"
-          [(ngModel)]="search"
-          (keyup)="(lookfor)"
+          [(ngModel)]="Search"
+          (keyup)='lookfor()'
           matInput
           placeholder="Search"
           [style.fontSize.px]="16"
           class="search-window"
           autocomplete="off"
-          (click)="(startSearch)"
+          (click)='startSearch()'
+          type="text"
         />
       </mat-form-field>
     </div>
 
-    <div fxFlex="25" class="settingbtn">
+ <!-- tool bar icons -->
+
+    <div fxFlex="25" class="settingbtn"> 
+ 
+<!-- refresh butto -->
+
       <button
         mat-icon-button
         color="basic"
@@ -67,7 +76,9 @@
         <mat-icon id="refresh">refresh</mat-icon>
       </button>
 
-      <button mat-icon-button color="basic" id="grid" matTooltip="Grid view">
+      <!-- grid view and list view  -->
+
+      <button fxHide.xs="100" mat-icon-button color="basic" id="grid" matTooltip="Grid view">
         <mat-icon id="gridlist">
           <img
             *ngIf="islist"
@@ -83,7 +94,7 @@
 
       <!-- settings button  -->
 
-      <button
+      <!-- <button
         mat-icon-button
         [matMenuTriggerFor]="menu"
         colour="basic"
@@ -99,14 +110,16 @@
         <button mat-menu-item>Help</button>
         <button mat-menu-item>App downloads</button>
         <button mat-menu-item>Keyboard Shortcuts</button>
-      </mat-menu>
+      </mat-menu> -->
+
+      <!-- app routs to appilaction links -->
 
       <button mat-icon-button color="basic" matTooltip="Apps" [matMenuTriggerFor]="apps" class="app">
         <mat-icon
           ><img src="../../../assets/image/outline-apps-24px.svg"
         /></mat-icon>
       </button>
-      <mat-menu #apps="matMenu" fxLayout="row">
+      <mat-menu #apps="matMenu" fxLayout="row rap">
         <button mat-menu-item (click)="goToUrl()"><img src="../../../assets/image/icons8-google.svg"></button>
         <button mat-menu-item (click)="goToUrl1()"><img src="../../../assets/image/icons8-google-drive.svg"></button>
         <button mat-menu-item (click)="goToUrl2()"><img src="../../../assets/image/icons8-google-maps.svg"></button>
@@ -117,7 +130,8 @@
 
     </div>
 
-    <!-- profile pic edit -->
+    <!-- user profile pic -->
+    
     <button mat-mini-fab [ngStyle]="{'background-image':'url(' +img+ ')','background-size':'cover'}"
     [matMenuTriggerFor]="menu1" colour="basic" matTooltip=" Fundoo Account user: {{username}}, email: {{email}}" [matTooltipClass]="'my-tooltip'"
     fxLayout="row" fxLayoutAlign="end center">
@@ -126,7 +140,7 @@
     <mat-menu id="profile" #menu1="matMenu" class="menu-button" fxLayout="row" fxLayoutAlign="end start">
       <div  class="backgroundimage" >
         <button (click)="$event.stopPropagation()"
-        [ngStyle]="{'background-image':'url(' +img+ ')','background-size':'cover','width':'65px','height':'65px'}"
+        [ngStyle]="{'background-image':'url(' +img+ ')','background-size':'cover','width':'75px','height':'75px'}"
         (click)="imageSelectFile.click()" matTooltip="Fundoo Account" mat-mini-fab class="imageSelect">
         <div mat-raised-button class="change">change</div>
       </button>
@@ -226,15 +240,23 @@
           </div>
 
           <mat-divider></mat-divider>
-          <div>
-            <p id="para">LABELS</p>
+          <!-- *************************** labels *********************************** -->
+        
+            <div id="para">LABELS</div>
+            <div>
+              <button mat-button (click)="editlabel()">
+                  <mat-icon>label_outline</mat-icon>
+              </button>
+            </div>
             <mat-list-item role="listitem" (click)="openLabel()" id="lable">
               <mat-icon id="edit">edit</mat-icon>
-              Edit label
+              Edit labels
             </mat-list-item>
-          </div>
+          
 
           <mat-divider></mat-divider>
+
+
           <div>
             <mat-list-item role="listitem" id="arch" (click)="archive()">
               <img id="img4" src="../../../assets/image/archieve.svg" />
