--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -146,18 +146,27 @@ mat-sidenav {
 }
 #img1 {
   margin-right: 10%;
+  opacity: 0.6;
 }
 #img2 {
   margin-right: 10%;
+  opacity: 0.6;
 }
 #edit {
   margin-right: 10%;
+  opacity: 0.6;
 }
 #img4 {
   margin-right: 10%;
+  opacity: 0.6;
 }
 #img5 {
   margin-right: 10%;
+  opacity: 0.6;
+}
+#labels{
+  // margin-left: 10%;
+  opacity: 0.6;
 }
 
 .container {
